Commented out julia's sections for time being

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 class="table shiny-table table- spacing-s"
                 style="width: auto"
               >
-                <h4 class="param-headings">Updated parameters</h4>
+                <!-- <h4 class="param-headings">Updated parameters</h4>
                 <h5 class="param-headings">
                   Please read paper linked for more context on the performance
                   of the parameters on specific TAGs.
@@ -345,7 +345,7 @@
                   background-color: #c2dfff;
                   border-style: none;
                 }
-              </style>
+              </style> -->
 
               <h4 class="param-headings">Batch file</h4>
               <p class="param-headings">
